--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.2",
     "bootstrap-icons": "^1.10.3",
+    "bootswatch": "^5.2.3",
     "gh-pages": "^5.0.0",
     "react": "^18.2.0",
     "react-csv": "^2.2.2",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
+    "react-search-autocomplete": "^8.3.1",
     "react-select": "^5.7.0",
     "reactstrap": "^9.1.6",
     "web-vitals": "^2.1.4"
