--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-scripts": "5.0.1",
     "react-search-autocomplete": "^8.3.1",
     "react-select": "^5.7.0",
+    "react-share": "^4.4.1",
     "react-toastify": "^9.1.1",
     "reactstrap": "^9.1.6",
     "web-vitals": "^2.1.4"
